--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,162 +1,231 @@
-:root{
-    --color1: rgb(130, 97, 238);
-    --color2: rgb(255, 88, 158);
-    --color3: rgba(130, 97, 238, 0.8);
-    --color4: rgba(255, 88, 158, 0.5);
-    --color5: rgb(237, 237, 237);
-    --color6: rgb(157, 157, 157);
+:root {
+  --color1: rgb(130, 97, 238);
+  --color2: rgb(255, 88, 158);
+  --color3: rgba(130, 97, 238, 0.8);
+  --color4: rgba(255, 88, 158, 0.5);
+  --color5: rgb(237, 237, 237);
+  --color6: rgb(157, 157, 157);
+  --color7: rgb(34, 33, 33);
+  --color8: rgb(131, 92, 92, 0.4);
 }
 
 /************************* COMMON *************************/
 
-body{
-    font-family: Raleway;
+body {
+  font-family: Raleway;
 }
 
-.btn{
-    border-radius: 3rem;
-    padding: 0.8rem 2rem;
-    text-transform: uppercase;
+.btn {
+  border-radius: 3rem;
+  padding: 0.8rem 2rem;
+  text-transform: uppercase;
 }
 
-.btn-primary{
-    background-color: var(--color1);
-    border-color: var(--color1);
+.btn-primary {
+  background-color: var(--color1);
+  border-color: var(--color1);
 }
 
 .btn-primary:hover {
-    background-color: var(--color2);
-    border-color: var(--color2);
+  background-color: var(--color2);
+  border-color: var(--color2);
 }
 
-.btn-secondary{
-    background-color: var(--color2);
-    border-color: var(--color2);
+.btn-secondary {
+  background-color: var(--color2);
+  border-color: var(--color2);
 }
 
 .btn-secondary:hover {
-    background-color: var(--color1);
-    border-color: var(--color1);
+  background-color: var(--color1);
+  border-color: var(--color1);
 }
 
-
-.card{
-    border-radius: 3rem;
-    text-align: center;
-    border:0;
-    box-shadow: 0 0 10px var(--color5);
-    padding: 2rem 1rem;
+.card {
+  border-radius: 3rem;
+  text-align: center;
+  border: 0;
+  box-shadow: 0 0 10px var(--color5);
+  padding: 2rem 1rem;
+  font-size: 0.9rem;
 }
-
-
-
-
+.section-header {
+  margin: 0 auto;
+  width: 60%;
+  margin-top: 3rem;
+  text-align: center;
+}
+.section-header h3 {
+  font-size: 2rem;
+  margin-top: 1.5rem;
+}
+.section-header.light {
+  color: var(--color5);
+}
 /************************* NAVBAR *************************/
-nav.main-navbar{
-    border-radius: 3rem;
-    padding: 1.5rem;
-    box-shadow: 0 0 10px var(--color5);
+nav.main-navbar {
+  border-radius: 3rem;
+  padding: 1.5rem;
+  box-shadow: 0 0 10px var(--color5);
 }
 
-nav.main-navbar .navbar-nav{
-    gap:1rem;
-    font-size: 0.9rem;
-    font-weight: 500;
-    letter-spacing: 0.1rem;
+nav.main-navbar .navbar-nav {
+  gap: 1rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
 }
 
 /*Burası bootstrap teki seçiciler
 Biz aynısını kullanarak bootstrap stilini ezdik
 */
-.navbar-nav .nav-link.active, 
-.navbar-nav .show>.nav-link {
-    color: var(--color2);
+.navbar-nav .nav-link.active,
+.navbar-nav .show > .nav-link {
+  color: var(--color2);
 }
 
 /************************* CAROUSEL SLIDER *************************/
 
-.main-slider .carousel-item::before{
-    content: "";
-    background-image: linear-gradient(30deg, var(--color4), var(--color3));
-    position: absolute;
-    top:0; left:0; right:0; bottom: 0;
-    z-index: 5;
+.main-slider .carousel-item::before {
+  content: "";
+  background-image: linear-gradient(30deg, var(--color4), var(--color3));
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
 }
 
-
-.main-slider .carousel-caption{
-    z-index: 6;
-    top:50%;
-    left:20%;
-    right:20%;
-    bottom: auto;
-    transform: translateY(-50%);
+.main-slider .carousel-caption {
+  z-index: 6;
+  top: 50%;
+  left: 20%;
+  right: 20%;
+  bottom: auto;
+  transform: translateY(-50%);
 }
 
-.main-slider .carousel-caption h2{
-    font-size: 2.5rem;
-    letter-spacing: 0.1rem;
-    margin-bottom: 2rem;
+.main-slider .carousel-caption h2 {
+  font-size: 2.5rem;
+  letter-spacing: 0.1rem;
+  margin-bottom: 2rem;
 }
 
-.main-slider .carousel-caption p{
-    margin-bottom: 2rem;
+.main-slider .carousel-caption p {
+  margin-bottom: 2rem;
 }
-
 
 /************************* HIGHLIGHTS *************************/
-.highlights{
-    transform: translateY(-50%);
-    position: relative;
-    z-index: 99;
+.highlights {
+  transform: translateY(-50%);
+  position: relative;
+  z-index: 99;
 }
 
-
-.highlights .card .card-body{
-    display: flex;
-    flex-direction: column;
-    gap:1rem;
+.highlights .card .card-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.highlights .card .icon{
-    background-color: var(--color1);
-    width:6rem;
-    height: 6rem;
-    font-size: 3rem;
-    padding:1rem;
-    border-radius: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    color: var(--color5);
+.highlights .card .icon {
+  background-color: var(--color1);
+  width: 6rem;
+  height: 6rem;
+  font-size: 3rem;
+  padding: 1rem;
+  border-radius: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  color: var(--color5);
 }
 
-.highlights .card h5{
-    font-weight: 600;
+.highlights .card h5 {
+  font-weight: 600;
 }
-
 
 /************************* ABOUT US *************************/
-.about-us .icon{
-    font-size: 15rem;
-    color: var(--color1);
+.about-us .icon {
+  font-size: 15rem;
+  color: var(--color1);
 }
 
-.about-us .row:first-child{
-    padding-bottom: 10rem;
-    border-bottom: 1px solid var(--color5);
+.about-us .row:first-child {
+  padding-bottom: 10rem;
+  border-bottom: 1px solid var(--color5);
 }
-.about-us .row:last-child{
-    padding-top: 10rem;
-}
-
-.about-us h3{
-    margin-bottom: 1.5rem;
-    letter-spacing: 0.1rem;
+.about-us .row:last-child {
+  padding-top: 10rem;
 }
 
-.about-us p{
-    color: var(--color6);
-    letter-spacing: 0.1rem;
+.about-us h3 {
+  margin-bottom: 1.5rem;
+  letter-spacing: 0.1rem;
+}
+
+.about-us p {
+  color: var(--color6);
+  letter-spacing: 0.1rem;
+}
+/*work process*/
+
+.work-process {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  position: relative;
+  background-image: url(/assets/img/banner-02.jpg);
+  margin-top: 5rem;
+}
+
+.work-process::after {
+  content: "";
+  background-image: linear-gradient(30deg, var(--color4), var(--color3));
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.work-process > .container {
+  position: relative;
+  z-index: 2;
+}
+
+.work-process .card {
+  box-shadow: 1rem 1rem 0 var(--color8);
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+.work-process .card:hover {
+  transform: scale(1.1);
+}
+
+.work-process .card i {
+  color: var(--color3);
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+/******testimonals**********/
+
+.testimonals {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.testimonals i {
+  font-size: 2rem;
+  color: var(--color3);
+  margin-bottom: 1rem;
+}
+
+.testimonals p {
+  color: var(--color6);
+}
+.testimonals .title {
+  color: var(--color2);
 }
