--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,13 @@
 :root {
   --color1: rgb(130, 97, 238);
   --color2: rgb(255, 88, 158);
-  --color3: rgba(130, 97, 238, 0.8);
-  --color4: rgba(255, 88, 158, 0.5);
+  --color3: rgba(130, 97, 238, 0.95);
+  --color4: rgba(255, 88, 158, 0.95);
   --color5: rgb(237, 237, 237);
   --color6: rgb(157, 157, 157);
-  --color7: rgb(34, 33, 33);
-  --color8: rgb(131, 92, 92, 0.4);
+  --color7: rgb(33, 33, 33);
+  --color8: rgba(130, 97, 238, 0.3);
+  --color9: rgba(255, 88, 158, 0.3);
 }
 
 /************************* COMMON *************************/
@@ -49,19 +50,23 @@ body {
   padding: 2rem 1rem;
   font-size: 0.9rem;
 }
+
 .section-header {
   margin: 0 auto;
+  margin-bottom: 3rem;
   width: 60%;
-  margin-top: 3rem;
   text-align: center;
 }
+
 .section-header h3 {
   font-size: 2rem;
-  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
+
 .section-header.light {
   color: var(--color5);
 }
+
 /************************* NAVBAR *************************/
 nav.main-navbar {
   border-radius: 3rem;
@@ -123,6 +128,18 @@ Biz aynısını kullanarak bootstrap stilini ezdik
   z-index: 99;
 }
 
+@media (max-width: 1200px) {
+  .highlights {
+    transform: translateY(0);
+    margin-top: 4rem;
+    margin-bottom: 8rem;
+  }
+}
+
+.highlights .card {
+  height: 100%;
+}
+
 .highlights .card .card-body {
   display: flex;
   flex-direction: column;
@@ -148,6 +165,12 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 }
 
 /************************* ABOUT US *************************/
+@media (max-width: 768px) {
+  .about-us {
+    text-align: center;
+  }
+}
+
 .about-us .icon {
   font-size: 15rem;
   color: var(--color1);
@@ -170,13 +193,14 @@ Biz aynısını kullanarak bootstrap stilini ezdik
   color: var(--color6);
   letter-spacing: 0.1rem;
 }
-/*work process*/
+
+/************************* WORK PROCESS *************************/
 
 .work-process {
   padding-top: 5rem;
   padding-bottom: 5rem;
   position: relative;
-  background-image: url(/assets/img/banner-02.jpg);
+  background-image: url("../img/banner-01.jpg");
   margin-top: 5rem;
 }
 
@@ -190,6 +214,7 @@ Biz aynısını kullanarak bootstrap stilini ezdik
   bottom: 0;
   z-index: 1;
 }
+
 .work-process > .container {
   position: relative;
   z-index: 2;
@@ -201,22 +226,24 @@ Biz aynısını kullanarak bootstrap stilini ezdik
   cursor: pointer;
   transition: transform 0.2s;
 }
+
 .work-process .card:hover {
   transform: scale(1.1);
 }
 
 .work-process .card i {
-  color: var(--color3);
   font-size: 3rem;
+  color: var(--color3);
   margin-bottom: 1rem;
 }
 
-/******testimonals**********/
+/************************* TESTIMONALS *************************/
 
 .testimonals {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
+
 .testimonals i {
   font-size: 2rem;
   color: var(--color3);
@@ -226,6 +253,190 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 .testimonals p {
   color: var(--color6);
 }
+
 .testimonals .title {
   color: var(--color2);
+}
+
+/************************* PRICING PLAN *************************/
+.pricing-plan {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: var(--color5);
+}
+
+.pricing-plan .card .card-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+
+.pricing-plan .price {
+  background-color: var(--color1);
+  border-radius: 20px;
+  padding: 1rem;
+  color: var(--color5);
+}
+
+.pricing-plan .col:nth-child(even) .price {
+  background-color: var(--color2);
+}
+
+.pricing-plan ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: var(--color6);
+}
+
+.pricing-plan ul li {
+  line-height: 2rem;
+}
+
+.pricing-plan ul li:last-child {
+  text-decoration: line-through;
+}
+
+.pricing-plan button {
+  align-self: center;
+}
+
+/************************* STATISTICS *************************/
+
+.statistics {
+  background-image: url("../img/banner-02.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  position: relative;
+  text-align: center;
+  color: var(--color5);
+}
+
+.statistics::after {
+  content: "";
+  background-image: linear-gradient(30deg, var(--color4), var(--color3));
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.statistics > .container {
+  position: relative;
+  z-index: 2;
+}
+
+.statistics h4 {
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.statistics span {
+  font-size: 0.9rem;
+}
+
+/************************* BLOG ENTRIES *************************/
+.blog-entries {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  text-align: center;
+}
+
+.blog-entries img {
+  width: 100%;
+  height: auto;
+}
+
+.blog-entries [class^="col"] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.blog-entries [class^="col"] h3 {
+  font-size: 1.2rem;
+}
+
+.blog-entries [class^="col"] p {
+  color: var(--color6);
+}
+
+/************************* CONTACT *************************/
+.contact {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  background-color: var(--color5);
+}
+
+.contact .keep-in-touch {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact .keep-in-touch h3 {
+  font-size: 1.3rem;
+}
+
+.contact .keep-in-touch p {
+  color: var(--color6);
+  line-height: 2rem;
+}
+
+.contact input,
+.contact textarea {
+  border-radius: 20px;
+  padding: 0.8rem 1.2rem;
+  font-size: 0.8rem;
+}
+
+.contact input:focus,
+.contact textarea:focus {
+  border-color: var(--color9);
+  box-shadow: var(--color9) 0px 0px 0px 0.25rem;
+}
+
+/************************* FOOTER *************************/
+
+.footer {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-image: linear-gradient(30deg, var(--color4), var(--color3));
+  text-align: center;
+}
+
+.footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.footer ul a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: var(--color5);
+  border-radius: 2rem;
+  text-decoration: none;
+  color: var(--color1);
+  transition: transform 0.3s;
+}
+
+.footer ul i {
+  font-size: 1.3rem;
+}
+
+.footer ul a:hover {
+  transform: scale(1.2) rotate(360deg);
 }
