--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ Biz aynısını kullanarak bootstrap stilini ezdik
   transform: translateY(-50%);
   position: relative;
   z-index: 99;
+  margin-bottom: -7rem;
 }
 
 @media (max-width: 1200px) {
@@ -165,6 +166,11 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 }
 
 /************************* ABOUT US *************************/
+.about-us {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
 @media (max-width: 768px) {
   .about-us {
     text-align: center;
@@ -197,8 +203,8 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 /************************* WORK PROCESS *************************/
 
 .work-process {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
   position: relative;
   background-image: url("../img/banner-01.jpg");
   margin-top: 5rem;
@@ -240,8 +246,8 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 /************************* TESTIMONALS *************************/
 
 .testimonals {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 
 .testimonals i {
@@ -260,8 +266,8 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 
 /************************* PRICING PLAN *************************/
 .pricing-plan {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
   background-color: var(--color5);
 }
 
@@ -308,8 +314,8 @@ Biz aynısını kullanarak bootstrap stilini ezdik
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
   position: relative;
   text-align: center;
   color: var(--color5);
@@ -342,8 +348,8 @@ Biz aynısını kullanarak bootstrap stilini ezdik
 
 /************************* BLOG ENTRIES *************************/
 .blog-entries {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
   text-align: center;
 }
 
